--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,13 @@ p{
     font-style: oblique;
 }
 .order{
-    background-color: rgb(155, 137, 133);
-    color: brown;
+    background-color: rgb(38, 43, 35);
+    color: rgb(117, 105, 67);
+}
+.form-control{
+    background: transparent;
+    /* border-radius: 0px; */
+    border-color:  rgb(117, 105, 67);
 }
 h4{
     text-align: center;
@@ -31,4 +36,7 @@ h4{
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
     font-weight: bold;
+}
+.card{
+    background: transparent;
 }
