--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ p{
 }
 .order{
     background-color: rgb(38, 43, 35);
-    color: rgb(117, 105, 67);
+    color: rgb(131, 120, 85);
 }
 .form-control{
     background: transparent;
@@ -39,4 +39,7 @@ h4{
 }
 .card{
     background: transparent;
+}
+#btn{
+    background: rgb(48, 90, 40);
 }
