--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ p{
 }
 .form-control{
     background: transparent;
+    color: rgb(177, 174, 174);
     /* border-radius: 0px; */
     border-color:  rgb(117, 105, 67);
 }
@@ -41,5 +42,9 @@ h4{
     background: transparent;
 }
 #btn{
-    background: rgb(48, 90, 40);
+    background: rgb(90, 68, 40);
+}
+footer{
+    background: rgb(51, 59, 65);
+    color: grey;
 }
