--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ p{
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-style: oblique;
+    color: #fff;
 }
 .prices{
     background-color: rgb(105, 102, 96);
